--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "react-icons": "^5.0.1"
   }
 }
