--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = 'mongodb+srv://g3vind:wCCcfbsdbsyC3gpK@cluster0.9zcg2rz.mongodb.net/task1'
+JWT_SECRET='iudshnvijdsv6546546443543545235&^&*^&%()*'
